Improved color picking